--- a/FishSellingOnline/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FishSellingOnline/Areas/Identity/Pages/Account/Register.cshtml
@@ -47,6 +47,12 @@
                 <input asp-for="Input.ContactNumber" class="form-control" />
                 <span asp-validation-for="Input.ContactNumber" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.userRoles"></label>
+                <select asp-for="Input.userRoles" asp-items="Model.RoleselectList" class="form-control">
+                </select>
+                <span asp-validation-for="Input.userRoles" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
