--- a/FishSellingOnline/Views/Products/Details.cshtml
+++ b/FishSellingOnline/Views/Products/Details.cshtml
@@ -51,6 +51,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProductID">Edit</a> |
+    @if (User.IsInRole("Seller"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.ProductID">Edit</a> 
+    }
     <a asp-action="Index">Back to List</a>
 </div>
