--- a/FishSellingOnline/Views/Products/Index.cshtml
+++ b/FishSellingOnline/Views/Products/Index.cshtml
@@ -8,7 +8,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @if (User.IsInRole("Seller"))
+    {
+        <a asp-action="Create">Create New</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -57,9 +60,17 @@
                 @Html.DisplayFor(modelItem => item.stockleft)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
+                @if (User.IsInRole("Seller"))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
+                }
+                else
+                {
+                    <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
+                }
+
             </td>
         </tr>
 }
