--- a/FishSellingOnline/Views/Products/Index.cshtml
+++ b/FishSellingOnline/Views/Products/Index.cshtml
@@ -73,13 +73,9 @@
 
             </td>
             <td>
-                if (User.InRole("Customer"))
+                @if (User.InRole("Customer"))
                 {
                     <a asp-action="AddToCart" asp-route-id="@item.ProductID">Add to cart</a>
-                }
-                else
-                {
-
                 }
             </td>
         </tr>
