--- a/FishSellingOnline/Views/Shared/_Layout.cshtml
+++ b/FishSellingOnline/Views/Shared/_Layout.cshtml
@@ -24,9 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        @*<li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Blobs" asp-action="CreateContainer">Create Container</a>
-                        </li>*@
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Blobs" asp-action="ListItemGallery">Gallery</a>
+                        </li>
                         <partial name="_LoginPartial" />
                     </ul>
                     
