--- a/FishSellingOnline/Views/Shared/_LoginPartial.cshtml
+++ b/FishSellingOnline/Views/Shared/_LoginPartial.cshtml
@@ -8,6 +8,9 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders List</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Product Lists</a>
         </li>
         <li class="nav-item">
