--- a/FishSellingOnline/Views/Shared/_LoginPartial.cshtml
+++ b/FishSellingOnline/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,12 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Product Lists</a>
         </li>
+        @if (User.IsInRole("Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Blobs" asp-action="ListItemGallery">Gallery</a>
+            </li>
+        }
         <li class="nav-item">
             <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
