fixed some display texts

--- a/FishSellingOnline/Views/Blobs/ListItemGallery.cshtml
+++ b/FishSellingOnline/Views/Blobs/ListItemGallery.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ListItemGallery";
 }
 
-<h1>ListItemGallery</h1>
+<h1>Product Images</h1>
 
 <ul>
 
@@ -25,7 +25,7 @@
         string[] imagearray = item.Split("#");
         <li>
             <!-- Image, Label, Download, Delete-->
-            <img src="@imagearray[1]" width="200" height="300" />
+            <img src="@imagearray[1]" width="300" height="300" />
             <label style="color:indianred">@imagearray[0]</label>
             <a asp-route-imagename="@imagearray[0]" asp-route-urlimage="@imagearray[1]" asp-action="downloadblob">Download Image</a>
             <a asp-area="@imagearray[0]" asp-action="deleteblob">Delete Image</a>
