--- a/FishSellingOnline/Views/Products/Index.cshtml
+++ b/FishSellingOnline/Views/Products/Index.cshtml
@@ -5,14 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Products</h1>
 
-<p>
-    @if (User.IsInRole("Seller"))
-    {
+
+@if (User.IsInRole("Seller"))
+{
+    <p>
         <a asp-action="Create">Create New</a>
-    }
-</p>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -35,50 +37,51 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @if (item.ProductImage != null)
-                {
-                    <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(item.ProductImage))" />
-                }
-                else
-                {
-                    <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="">
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.stockleft)
-            </td>
-            <td>
-                @if (User.IsInRole("Seller"))
-                {
-                    <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
-                }
-                else
-                {
-                    <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
-                }
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductName)
+                </td>
+                <td>
+                    @if (item.ProductImage != null)
+                    {
+                        <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(item.ProductImage))" />
+                    }
+                    else
+                    {
+                        <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="">
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductPrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.stockleft)
+                </td>
+                <td>
+                    @if (User.IsInRole("Seller"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
+                    }
+                    else
+                    {
+                        <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
+                    }
 
-            </td>
-            <td>
-                @if (User.IsInRole("Customer"))
-                {
-                    <a asp-action="AddToCart" asp-route-id="@item.ProductID">Add to cart</a>
-                }
-            </td>
-        </tr>
-}
+                </td>
+                @*<td>
+                    @if (User.IsInRole("Customer"))
+                    {
+                        <a asp-action="AddToCart" asp-route-id="@item.ProductID">Add to cart</a>
+                    }
+                </td>*@
+            </tr>
+        }
     </tbody>
 </table>
