--- a/FishSellingOnline/Views/Orders/Index.cshtml
+++ b/FishSellingOnline/Views/Orders/Index.cshtml
@@ -5,13 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+
 
 @if (User.IsInRole("Customer"))
 {
+    <h1>Order</h1>
     <p>
         <a asp-action="Create">Create New</a>
     </p>
+}
+else
+{
+    <h1>Customer Order</h1>
 }
 
 <table class="table">
@@ -55,8 +60,11 @@
                     @Html.DisplayFor(modelItem => item.Total)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.OrderID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.OrderID">Cancel order</a>
+                    <a asp-action="Details" asp-route-id="@item.OrderID">Details</a> 
+                    @if (User.IsInRole("Seller") || User.IsInRole("Customer"))
+                    {
+                        |< a asp-action="Delete" asp-route-id="@item.OrderID">Cancel order</a>
+                    }
                 </td>
             </tr>
         }
