--- a/FishSellingOnline/Views/Shared/_LoginPartial.cshtml
+++ b/FishSellingOnline/Views/Shared/_LoginPartial.cshtml
@@ -19,9 +19,12 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Blobs" asp-action="ListItemGallery">Gallery</a>
             </li>
         }
-        <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-        </li>
+        @if (User.IsInRole("Seller") || User.IsInRole("Customer"))
+        {
+            <li class="nav-item">
+                <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            </li>
+        }
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
