--- a/FishSellingOnline/Views/Products/Index.cshtml
+++ b/FishSellingOnline/Views/Products/Index.cshtml
@@ -65,8 +65,8 @@
                 <td>
                     @if (User.IsInRole("Seller"))
                     {
-                        <a asp-action="Edit" asp-route-id="@item.ProductID">Edit | </a>
-                        <a asp-action="Details" asp-route-id="@item.ProductID">Details | </a>
+                        <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.ProductID">Details</a>
                         <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
                     }
                     else
