--- a/FishSellingOnline/Views/Products/Delete.cshtml
+++ b/FishSellingOnline/Views/Products/Delete.cshtml
@@ -21,8 +21,15 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductImage)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductImage)
+        <dd class="col-sm-10">
+            @if (Model.ProductImage != null)
+            {
+            <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.ProductImage))" />
+            }
+            else
+            {
+            <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="">
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductDescription)
